@@ -59,6 +59,7 @@
 									test.irods.scratch.subdir=${jargon.test.irods.scratch.subdir}
 									test.mac.icommand.path=${jargon.test.mac.icommand.path}
 									test.option.exercise.remoteexecstream=${jargon.test.option.exercise.remoteexecstream}
+									test.option.exercise.ticket=${jargon.test.option.exercise.ticket}
 		</echo>
 							</tasks>
 						</configuration>
