@@ -19,3 +19,4 @@ test.confirm=true
 									test.irods.scratch.subdir=jargon-scratch
 									test.mac.icommand.path=/opt/iRODS/iRODS2.5/iRODS/clients/icommands/bin/
 									test.option.exercise.remoteexecstream=true
+									test.option.exercise.ticket=true
